--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="engineer-4922781_640.jpg" class="profile_image"/>
+        <img src="html_finalprojimages/engineer-4922781_640.jpg" class="profile_image"/>
       </div>
 
       <div>
